# ThinkcellBuilder

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: main.yml  on-merge-to-main.yml  on-release-main.yml
.github/workflows/setup-poetry-env/: action.yml
tests/: test_thinkcellbuilder.py
tests/resources/: ppttc-schema.json  ppttc-schema12.json
thinkcellbuilder/: __init__.py  thinkcellbuilder.py
